chore(storage): update tsconfig

--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "@emdgroup/react-lib",
   "version": "1.0.0",
   "description": "Collection of React libraries",
-  "main": "index.js",
-  "keywords": ["react", "storage", "query", "auth"],
   "author": "Moritz Onken <onken@netcubed.de>",
   "license": "Apache-2.0",
   "private": true,
@@ -13,13 +11,15 @@
     "packages/auth"
   ],
   "devDependencies": {
-    "@types/node": "^16.4.7",
+    "@tsconfig/node14": "^1.0.1",
+    "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "ts-node": "^10.1.0",
     "typedoc": "^0.21.4",
     "typedoc-github-wiki-theme": "^0.5.0",
     "typedoc-plugin-markdown": "^3.10.3",
