feat(auth): add auth hook

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -4,7 +4,7 @@
     // some bundlers such as Webpack 4 don't support es2020 syntax yet
     "target": "es2019",
     "moduleResolution": "node",
-    "jsx": "preserve",
+    "jsx": "react",
     "baseUrl": "./",
     "paths": {
       "@emdgroup/*": ["./packages/*"],
