--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emdgroup/react-auth",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "React hooks implementing the Authorization Code Grant Flow with PKCE.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -15,8 +15,15 @@
     "docs": "npm run docs:build && ts-node ../../bin/merge-docs Exports.md UserContext.md ProviderOptions.md userInfo.md",
     "prepack": "npm run docs && rm -rf dist && tsc --build --force"
   },
-  "files": ["dist"],
-  "keywords": ["pkce", "react", "oauth2", "auth"],
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "pkce",
+    "react",
+    "oauth2",
+    "auth"
+  ],
   "author": "Moritz Onken <onken@netcubed.de>",
   "license": "Apache-2.0",
   "peerDependencies": {
