--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,11 +8,13 @@ plugins:
   - '@typescript-eslint'
 rules:
   '@typescript-eslint/camelcase': 0
+  '@typescript-eslint/semi': error
+  '@typescript-eslint/member-delimiter-style': error
   '@typescript-eslint/no-unused-vars':
     - error
     - ignoreRestSiblings: true
       argsIgnorePattern: ^_
-  semi: 2
+  semi: off
   quotes: ['error', 'single']
   quote-props: ['error', 'consistent-as-needed']
   comma-dangle: ['error', 'always-multiline']
