--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "docs:build": "rm -rf docs README.md && typedoc --hideInPageTOC --excludeNotDocumented --disableSources --theme ../../node_modules/typedoc-github-wiki-theme/dist src/index.tsx",
-    "docs": "npm run docs:build && ts-node ../../bin/merge-docs Exports.md UserContext.md ProviderOptions.md userInfo.md",
+    "docs": "npm run docs:build && ts-node ../../bin/merge-docs Exports.md UserContext.md ProviderOptions.md LoginOptions.md UserInfo.md",
     "prepack": "npm run docs && rm -rf dist && tsc --build --force"
   },
   "files": [
