--- a/packages/query/package.json
+++ b/packages/query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emdgroup/react-query",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "React hooks for the fetch API with support for client-side caching",
   "type": "module",
   "main": "./dist/index.js",
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "docs:build": "rm -rf docs README.md && typedoc --hideInPageTOC --excludeNotDocumented --disableSources --theme github-wiki src/index.ts",
-    "docs": "npm run docs:build && ts-node ../../bin/merge-docs Exports.md QueryResponse.md",
+    "docs": "npm run docs:build && ts-node ../../bin/merge-docs Exports.md RequestOptions.md QueryResponse.md HTTPError.md",
     "prepack": "npm run docs && rm -rf dist && tsc --build --force"
   },
   "files": [
